syntax = "proto3";

package users;

service UserManager {
  rpc CreateUser (User) returns (User) {};
  rpc GetUser(User) returns (User) {};
  rpc GetUserByUsername (User) returns (User) {};
  rpc GetUserByEmail (User) returns (User) {};
  rpc ListUsers (Empty) returns (UserList) {};
  rpc UpdateUser (User) returns (User) {};
  rpc DeleteUser (User) returns (User) {};
}

message Empty {}

message User {
  string id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  string first_name = 5;
  string last_name = 6;
}

message UserList {
  repeated User users = 1;
}